# backend_python

./: .gitignore  01_boas_praticas.py  README.md
API com flask/: pyproject.toml
API com flask/instance/: blog.sqlite  diobank.sqlite
API com flask/migrations/versions/: 46600521f028_add_active_attr_in_user.py  654c7b4a369a_initial_migration.py
API com flask/src/: app.py  utils.py
API com flask/src/controllers/: auth.py  user.py
API com flask/tests/: test_utils.py
API com flask/tests/integration/: conftest.py
API com flask/tests/integration/controllers/: test_user.py
API com flask/tests/unit/: test_utils.py
Banco de dados/: conexao.py  dbapi.py  meu_banco.db  transacao.py
ambiente_virtual/: pyproject.toml
challenge_bootcamp/: challenge1.py  challenge2.py  challenge3.py
desafio/: .flake8
